--- a/README.org
+++ b/README.org
@@ -7,6 +7,7 @@ Let's see how long I will bother trying to make this be usable.
 ** Quick start
 
 *** Linux
+**** Build
 
 #+BEGIN_SRC bash
   git clone https://github.com/rubensorensen/sparrow.git
@@ -14,15 +15,26 @@ Let's see how long I will bother trying to make this be usable.
   mkdir build && cd build
   cmake ..
   make -k -j`nproc`
-  ./test
-  ./sparrow
+#+END_SRC
+
+**** Run
+#+BEGIN_SRC bash
+  # Test
+  ./build/test
+  
+  # Run
+  ./build/sparrow
 #+END_SRC
 
 *** Windows
 Windows support is not a priority at the moment and won't be officially supported in the near future.
 
+*** MacOS
+MacOS support is not a priority at the moment and won't be officially supported in the near future. Linux build guide may work.
+
 **  Contributing
 The project is still in its early stages, and I am currently the sole contributor while I'm working on the initial development. In the future I may consider opening up for public contributions.
 
-** License
-The project is licensed under the [[https://opensource.org/license/mit/][MIT license]].
+** License(s)
+This project is licensed under the [[https://opensource.org/license/mit/][MIT license]].
+Licenses from third-parties are listed in [[file:LICENSES_THIRD_PARTY][LICENSES_THIRD_PARTY]].
